[lworld] C1's ValueNumbering optimization does not correctly handle delayed accesses

XMLWordPrintable

      # Internal Error (/oracle/valhalla/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:879), pid=74018, tid=74019
      # fatal error: DEBUG MESSAGE: exact klass and actual klass differ

      Current thread (0x00007fc4a80262f0): JavaThread "main" [_thread_in_Java, id=74019, stack(0x00007fc4aee1e000,0x00007fc4aef1f000)]

      Stack: [0x00007fc4aee1e000,0x00007fc4aef1f000], sp=0x00007fc4aef1d7e0, free space=1021k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13af480] MacroAssembler::debug64(char*, long, long*)+0x40
      J 259 c1 MainClass.method3(I)I (59 bytes) @ 0x00007fc49960084c [0x00007fc499600420+0x000000000000042c]

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: