8262128: [lworld] C1's ValueNumbering optimization does not correctly handle delayed accesses